--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,4 +20,7 @@ jobs:
       - name: create build
         run: npm run build
       - name: run tests
-        run: npm run test
+        with:
+          command: npm run test:e2e
+          start: npm run start-prod
+          wait-on: "http://localhost:5000"
