--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "@babel/preset-react": "^7.23.3",
     "@eslint/js": "^9.17.0",
     "@stylistic/eslint-plugin-js": "^2.12.1",
-    "@testing-library/jest-dom": "^6.2.0",
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.3.1",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
@@ -46,6 +46,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "style-loader": "^3.3.3",
+    "vitest": "^2.1.8",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
