--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "jest",
     "lint": "eslint",
     "eslint": "eslint './**/*.{js,jsx}'",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "play-test": "playwright test",
+    "test:report": "playwright show-report"
   },
   "repository": {
     "type": "git",
@@ -30,9 +32,11 @@
     "@babel/preset-env": "^7.23.7",
     "@babel/preset-react": "^7.23.3",
     "@eslint/js": "^9.17.0",
+    "@playwright/test": "^1.49.1",
     "@stylistic/eslint-plugin-js": "^2.12.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
+    "@types/node": "^22.10.5",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
