--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Check style
         run: npm run eslint
       - name: create build
-        run: npm run buildnp
+        run: npm run build
       - name: Run Jest tests
         run: |
           npm run start-prod &
